# ebcic

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README-jp.md  README.md  SECURITY.md  ebcic.ipynb  ebcic.py  requirements.txt  setup.cfg  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: conf.py
docs/_build/: .buildinfo  ebcic.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: ebcic.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/_sources/: ebcic.rst.txt  index.rst.txt  modules.rst.txt
docs/_build/_static/: bizstyle.js
docs/_build/doctrees/: ebcic.doctree  environment.pickle  index.doctree
ebcic/: __init__.py  __main__.py
matlab/: ebcic_in_matlab.m  ebcic_in_matlab.md  ebcic_in_matlab.mlx
