# Setup-config file for PyPI
# 
# Run below:
# $ python setup.py sdist bdist_wheel
# $ twine check dist/*
## Test
# $ twine upload -r testpypi dist/ebcic-0.0.0*
# $ pip install -i https://test.pypi.org/simple/ ebcic==0.0.0
## Release
# $ twine upload -r pypi dist/ebcic-0.0.0*
# $ pip install ebcic
## Clean up
# $ rm -rf dist/ebcic-0.0.0*
## URL:
# https://pypi.org/project/ebcic/

[metadata]
name = ebcic
version = attr: ebcic.__version__
url = https://github.com/KazKobara/ebcic
author = Kaz KOBARA
author_email = M-kaz-ml@aist.go.jp
license_file = LICENSE
description = EBCIC (Exact Binomial Confidence Interval Calculator) package
long_description = file: README.md
long_description_content_type=text/markdown
keywords=statistics, binomial, confidence interval
classifiers =
    # https://pypi.org/classifiers/
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
install_requires =
    scipy >= 1.4
    matplotlib
python_requires = >= 3.8
